Start webpage slicing 2

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Нёрдс: Учебный проект Голованов А.</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header style="main-header">
+      <ul class="main-navigation">
+        <li><a href="studio.html"></a>Студия</li>
+        <li><a href="clients.html"></a>Клиенты</li>
+        <li><a href="shop.html"></a>Магазин</li>
+        <li><a href="contacts.html"></a>Контакты</li>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+      </ul>
+
+
+    </header>
 
   </body>
 </html>
