--- a/index.html
+++ b/index.html
@@ -6,17 +6,87 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header style="main-header">
+  <header class="main-header">
       <ul class="main-navigation">
-        <li><a href="studio.html"></a>Студия</li>
-        <li><a href="clients.html"></a>Клиенты</li>
-        <li><a href="shop.html"></a>Магазин</li>
-        <li><a href="contacts.html"></a>Контакты</li>
-
+        <li><a class="main-navigation-item" href="studio.html" >Студия</a></li>
+        <li><a class="main-navigation-item" href="clients.html">Клиенты</a></li>
+        <li><a class="main-navigation-item" href="shop.html">Магазин</a></li>
+        <li><a class="main-navigation-item" href="contacts.html">Контакты</a></li>
       </ul>
-
-
+    <!-- Судя по всему тут новых пунктов не планируется, поэтому корзину не стал размечать как список -->
+    <section>
+      <a class="main-navigation-item" href="#">Корзина</a>
+    </section>
+    <!-- Вот слайдеры я верстать не умею пока :( Поэтому разметил так -->
+    <section class="slider">
+      <h2 class="visually-hidden">Слайдер</h2>
+      <p class="slogan">Долго, дорого,<br>скрупулезно.</p>
+      <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+      <a class="button button-red main-header-button" href="#">Узнать больше</a>
+    </section>
     </header>
-
+  <main>
+    <section class="types-of-services">
+      <h2 class="visually-hidden">Типы услуг</h2>
+      <ul>
+        <li>
+          <h2>Веб-сайты</h2>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+          <span class="button button-red types-of-services-button">Заказать</span>
+        </li>
+        <li>
+          <h2>Приложения</h2>
+          <p>Покорите топ-10 приложений в<br> AppStore и Google Play</p>
+          <span class="button button-green types-of-services-button">Заказать</span>
+        </li>
+        <li>
+          <h2>презентации</h2>
+          <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+          <span class="button button-green types-of-services-button">Заказать</span>
+        </li>
+      </ul>
+    </section>
+    <section class="about-company">
+      <h2 class="visually-hidden">О нас</h2>
+      <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p>Выполняем заказы на разработку:</p>
+      <ul>
+        <li>Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>
+        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+      <p>с 2004 года Любим точность во всем:</p>
+      <ul>
+        <li>
+          <p class="slogan">146%</p>
+          <p>Уровень<br>самоотдачи</p>
+        </li>
+        <li>
+          <p class="slogan">100%</p>
+          <p>Соблюдение<br>сроков</p>
+        </li>
+        <li>
+          <p class="slogan">50%</p>
+          <p>Минимальная<br>предоплата</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <!-- Блок с логотипами партнеров -->
+    </section>
+    <section>
+      <!--Блок с картой-->
+    </section>
+  </main>
+  <footer class="main-footer">
+    <ul>
+      <li><a class="social-button" href="#">Вконтакте</a></li>
+      <li><a class="social-button" href="#">Фейсбук</a></li>
+      <li><a class="social-button" href="#">Инстаграм</a></li>
+    </ul>
+    <p class="slogan">Давайте дружить, это выгодно!</p>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+  </footer>
   </body>
 </html>
