Corrections for main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
   <header class="main-header">
-      <ul class="main-navigation">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo.png" width="160" height="65" alt="Логотип Nёrds">
+      </a>
+      <ul>
         <li><a class="main-navigation-item" href="studio.html" >Студия</a></li>
         <li><a class="main-navigation-item" href="clients.html">Клиенты</a></li>
         <li><a class="main-navigation-item" href="shop.html">Магазин</a></li>
@@ -17,6 +21,7 @@
     <section>
       <a class="main-navigation-item" href="#">Корзина</a>
     </section>
+    </nav>
     <!-- Вот слайдеры я верстать не умею пока :( Поэтому разметил так -->
     <section class="slider">
       <h2 class="visually-hidden">Слайдер</h2>
