--- a/index.html
+++ b/index.html
@@ -1,97 +1,128 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Нёрдс: Учебный проект Голованов А.</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.png" width="160" height="65" alt="Логотип Nёrds">
-      </a>
-      <ul>
-        <li><a class="main-navigation-item" href="studio.html" >Студия</a></li>
-        <li><a class="main-navigation-item" href="clients.html">Клиенты</a></li>
-        <li><a class="main-navigation-item" href="shop.html">Магазин</a></li>
-        <li><a class="main-navigation-item" href="contacts.html">Контакты</a></li>
-      </ul>
-    <!-- Судя по всему тут новых пунктов не планируется, поэтому корзину не стал размечать как список -->
-    <section>
-      <a class="main-navigation-item" href="#">Корзина</a>
-    </section>
-    </nav>
-    <!-- Вот слайдеры я верстать не умею пока :( Поэтому разметил так -->
-    <section class="slider">
-      <h2 class="visually-hidden">Слайдер</h2>
-      <p class="slogan">Долго, дорого,<br>скрупулезно.</p>
-      <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-      <a class="button button-red main-header-button" href="#">Узнать больше</a>
-    </section>
-    </header>
-  <main>
-    <section class="types-of-services">
-      <h2 class="visually-hidden">Типы услуг</h2>
-      <ul>
-        <li>
-          <h2>Веб-сайты</h2>
-          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-          <span class="button button-red types-of-services-button">Заказать</span>
-        </li>
-        <li>
-          <h2>Приложения</h2>
-          <p>Покорите топ-10 приложений в<br> AppStore и Google Play</p>
-          <span class="button button-green types-of-services-button">Заказать</span>
-        </li>
-        <li>
-          <h2>презентации</h2>
-          <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
-          <span class="button button-green types-of-services-button">Заказать</span>
-        </li>
-      </ul>
-    </section>
-    <section class="about-company">
-      <h2 class="visually-hidden">О нас</h2>
-      <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
+<head>
+  <meta charset="utf-8">
+  <title>Нёрдс: Учебный проект Голованов А.</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header class="main-header">
+  <nav class="main-nav">
+    <a class="main-nav__logo">
+      <img src="img/logo.png" width="160" height="65" alt="Логотип Nёrds">
+    </a>
+    <ul>
+      <li><a class="main-nav__item" href="#">Студия</a></li>
+      <li><a class="main-nav__item" href="#">Клиенты</a></li>
+      <li><a class="main-nav__item" href="#">Магазин</a></li>
+      <li><a class="main-nav__item" href="#">Контакты</a></li>
+    </ul>
+  </nav>
+  <div>
+    <a class="cart" href="#">Корзина</a>
+  </div>
+  <section class="slider">
+    <h3 class="visually-hidden">Слайдер</h3>
+    <ul class="slider__list">
+      <li class="slider__item">
+        <p class="slider__slogan">Долго, дорого, скрупулезно</p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a class="button slider__button button--red" href="#">Узнать больше</a>
+      </li>
+      <li class="slider__item">
+        <p class="slider__slogan">Любим математику как никто другой</p>
+        <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+        <a class="button slider__button button--red" href="#">Узнать больше</a>
+      </li>
+      <li class="slider__item">
+        <p class="slider__slogan">Только ночь,только хардкор</p>
+        <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+        <a class="button slider__button button--red" href="#">Узнать больше</a>
+      </li>
+    </ul>
+  </section>
+</header>
+<main>
+  <section class="services">
+    <h3 class="visually-hidden">Типы услуг</h3>
+    <ul class="services__list">
+      <li class="services__item">
+        <h2>Веб-сайты</h2>
+        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+        <span class="button services__button button--red">Заказать</span>
+      </li>
+      <li class="services__item">
+        <h2>Приложения</h2>
+        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+        <span class="button services__button button--green">Заказать</span>
+      </li>
+      <li class="services__item">
+        <h2>Презентации</h2>
+        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+        <span class="button services__button button--green">Заказать</span>
+      </li>
+    </ul>
+  </section>
+  <section class="about-company">
+    <div class="about-company__left-part">
+      <h3 class="visually-hidden">О нас</h3>
+      <p class="about-company__slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+        рук, как роботы.</p>
+      <!-- Здесь и далее решил разметить отдельным классом надписи из заглавных жирных букв. На заголовки они не тянут-->
+      <p class="small-uppercase-letters">Выполняем заказы на разработку:</p>
       <ul>
         <li>Веб-сайтов любой сложности</li>
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных презентаций</li>
       </ul>
-      <p>с 2004 года Любим точность во всем:</p>
+    </div>
+    <div class="about-company__right-part">
+      <p class="small-uppercase-letters">с 2004 года Любим точность во всем:</p>
       <ul>
         <li>
           <p class="slogan">146%</p>
-          <p>Уровень<br>самоотдачи</p>
+          <p>Уровень самоотдачи</p>
         </li>
         <li>
           <p class="slogan">100%</p>
-          <p>Соблюдение<br>сроков</p>
+          <p>Соблюдение сроков</p>
         </li>
         <li>
           <p class="slogan">50%</p>
-          <p>Минимальная<br>предоплата</p>
+          <p>Минимальная предоплата</p>
         </li>
       </ul>
-    </section>
-    <section>
-      <!-- Блок с логотипами партнеров -->
-    </section>
-    <section>
-      <!--Блок с картой-->
-    </section>
-  </main>
-  <footer class="main-footer">
-    <ul>
-      <li><a class="social-button" href="#">Вконтакте</a></li>
-      <li><a class="social-button" href="#">Фейсбук</a></li>
-      <li><a class="social-button" href="#">Инстаграм</a></li>
+    </div>
+  </section>
+  <section class="parnter-logo">
+    <h3 class="visually-hidden">Ссылки на партнерские сайты</h3>
+    <ul class="partner-logo_list">
+      <!-- Вместо пути к картинкам пока оставил заглушки. Будем стилизовать - заменю на пути -->
+      <li class="partner-logo__item"><img src="#" alt="HTML Academy" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><img src="#" alt="Barbershop Borodinski" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><img src="#" alt="Pink" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><img src="#" alt="Mishka" class="partner-logo__pict"></li>
     </ul>
-    <p class="slogan">Давайте дружить, это выгодно!</p>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
-  </footer>
-  </body>
+  </section>
+  <section class="address-map">
+    <h3 class="visually-hidden">Контактные реквизиты</h3>
+    <div class="address-map__requisites">
+      <p class="small-uppercase-letters">NЁRDS DESIGN STUDIO</p>
+      <p class="letters--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <p class="letters--grey">тел. +7 (812) 275-75-75</p>
+      <span class="button address-map__button button--red">Заказать</span>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <ul>
+    <li><a class="footer__social-button" href="#">Вконтакте</a></li>
+    <li><a class="footer__social-button" href="#">Фейсбук</a></li>
+    <li><a class="footer__social-button" href="#">Инстаграм</a></li>
+  </ul>
+  <p class="footer__slogan">Давайте дружить, это выгодно!</p>
+  <p>Скидка 10% для друзей из социальных сетей.</p>
+</footer>
+</body>
 </html>
