Images are exported and added to the markup.

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
   <nav class="main-nav">
     <a href="index.html" class="main-nav__logo">
-      <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Nёrds">
+      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Nёrds">
     </a>
     <ul>
       <li><a class="main-nav__item" href="#">Студия</a></li>
@@ -147,11 +147,11 @@
     </div>
   </section>
   <section class="address-map">
+    <img  class="map" src="img/map.jpg" alt="Схема проезда">
     <h2 class="visually-hidden">Контактные реквизиты</h2>
     <div class="address-map__requisites">
       <p class="small-uppercase-letters">NЁRDS DESIGN STUDIO</p>
       <address class="address letters--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <!-- <address class="letters--grey">тел. +7 (812) 275-75-75</address> -->
       <p class="letters--grey">тел.&nbsp;<a href="tel:+78122757575" class="address__tel letters--grey">+7 (812)
         275-75-75</a></p>
       <span class="button address-map__button button--red">Напишите нам</span>
@@ -160,9 +160,9 @@
 </main>
 <footer class="footer">
   <ul>
-    <li><a class="footer__social-button" href="#">Вконтакте</a></li>
-    <li><a class="footer__social-button" href="#">Фейсбук</a></li>
-    <li><a class="footer__social-button" href="#">Инстаграм</a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/vk-icon.svg" alt="ВКонтакте"></a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/fb-icon.svg" alt="Facebook"></a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/insta-icon.svg" alt="Instagram"></a></li>
   </ul>
   <p class="footer__slogan">Давайте дружить, это выгодно!</p>
   <p>Скидка 10% для друзей из социальных сетей.</p>
