--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
     <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
     <ul class="partner-logo_list">
       <!-- Вместо пути к картинкам пока оставил заглушки. Будем стилизовать - заменю на пути -->
-      <li class="partner-logo__item"><img src="https://htmlacademy.ru/intensive/htmlcss" alt="HTML Academy"
-                                          class="partner-logo__pict"></li>
-      <li class="partner-logo__item"><img src="#" alt="Barbershop Borodinski" class="partner-logo__pict"></li>
-      <li class="partner-logo__item"><img src="#" alt="Pink" class="partner-logo__pict"></li>
-      <li class="partner-logo__item"><img src="#" alt="Mishka" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="HTML Academy" class="partner-logo__pict"></a></li>
+      <li class="partner-logo__item"><img src="img/logo-2.png" alt="Barbershop Borodinski" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><img src="img/logo-3.png" alt="Pink" class="partner-logo__pict"></li>
+      <li class="partner-logo__item"><img src="img/logo-4.png" alt="Mishka" class="partner-logo__pict"></li>
     </ul>
   </section>
   <section class="address-map">
+    <img  class="map" src="img/map.jpg" alt="Схема проезда">
     <h2 class="visually-hidden">Контактные реквизиты</h2>
     <div class="address-map__requisites">
       <p class="small-uppercase-letters">NЁRDS DESIGN STUDIO</p>
@@ -124,9 +124,9 @@
 </main>
 <footer class="footer">
   <ul>
-    <li><a class="footer__social-button" href="#">Вконтакте</a></li>
-    <li><a class="footer__social-button" href="#">Фейсбук</a></li>
-    <li><a class="footer__social-button" href="#">Инстаграм</a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/vk-icon.svg" alt="ВКонтакте"></a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/fb-icon.svg" alt="Facebook"></a></li>
+    <li><a class="footer__social-button" href="#"><img class="footer__social-icon" src="img/insta-icon.svg" alt="Instagram"></a></li>
   </ul>
   <p class="footer__slogan">Давайте дружить, это выгодно!</p>
   <p>Скидка 10% для друзей из социальных сетей.</p>
